# hugflow

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  datasets  pyproject.toml
.github/workflows/: dataset-sync.yml
hugflow/: __init__.py  __main__.py  audit.py  cli.py  config.py  constants.py  gitops.py  hf_client.py  slack.py  storage.py  sync.py  validator.py
requests/add/: Revolab-autolabel_emilia_ms.yaml  Revolab-gemini-repetition.yaml  Revolab-synthetic-diacritized-MADAR-jordanian-text.yaml  Revolab-test.yaml  address_conversations.yaml  banking_agent_responses.yaml  chatterbox-entities.yaml  chatterbox-extra.yaml  chatterbox-filler-sentences.yaml  chatterbox-informal-phrases.yaml  final_test.yaml  gemini-repetition.yaml  repetitive_conversations.yaml  speechword_banks.yaml  speechword_banks_pt.yaml  synthetic-ft.yaml  synthetic.yaml  test_audio.yaml  test_json_size.yaml
requests/remove/: repetitive_conversations.yaml
tests/: __init__.py  test_config.py  test_gitops.py  test_slack.py  test_storage_resume.py
tests/fixtures/: __init__.py
